--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,9 +10,14 @@
   justify-content: flex-start;
 }
 
+.navbar__title .fa-bars path {
+  color: white !important;
+}
+
 .navbar h1 {
   margin-bottom: 0 !important;
   margin-left: 1rem;
+  color: white;
 }
 
 .navbar__links {
@@ -25,8 +30,8 @@
   font-family: 'Metropolis', sans-serif;
   font-weight: 500;
   text-transform: capitalize;
-  font-size: 0.95rem;
-  color: var(--black) !important;
+  font-size: 1rem;
+  color: white !important;
 }
 
 .navbar__links a:hover,
@@ -50,7 +55,7 @@
 }
 
 .navbar__linkRegister {
-  border: 1px solid var(--black);
+  border: 2px solid white;
   padding: 0.6rem 0.5rem;
   border-radius: 3px;
 }
