--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed !important;
+  width: 100vw;
+  top: 0;
+  z-index: 99;
 }
 
 .navbar__title {
