--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -54,6 +54,8 @@
 }
 
 .navbar__searchBar {
+  display: flex;
+  align-items: center;
   background-color: white;
   padding: 0.4rem 0.7rem;
   width: 100%;
@@ -70,6 +72,7 @@
   background-color: none;
   border: none;
   margin-left: 0.7rem;
+  width: 100%;
 }
 
 .navbar__searchButton {
