Adding logos to footer and navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -82,6 +82,7 @@
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   font-weight: 500;
+  border-bottom: 1px solid var(--yellow);
 }
 
 .navbar__searchButton:hover,
