Changed background of home page Adding margin left to main slogan

--- a/src/components/HomeComponent.css
+++ b/src/components/HomeComponent.css
@@ -1,7 +1,11 @@
 .main {
   width: 100vw;
   height: 100vh;
-  background-color: blueviolet;
+  /*  background-color: blueviolet; */
+  background-image: url('../assets/images/HomeBackground.jpg');
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: -1;
 }
 
@@ -9,11 +13,12 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  margin-left: 20px;
 }
 
 .main__slogan {
   font-weight: 600;
-  color: white;
+  color: var(--black);
   font-size: 3rem;
   line-height: 4rem;
 }
@@ -25,7 +30,7 @@
 }
 
 .main__searchBar {
-  background-color: white;
+  background-color: var(--black);
   padding: 0.7rem 0.7rem;
   width: 100%;
   border-top-left-radius: 5px;
@@ -44,6 +49,8 @@
   margin-left: 0.7rem;
   width: 100%;
   overflow-x: hidden;
+  background-color: var(--black);
+  color: white;
 }
 
 .main__searchButton {
@@ -66,6 +73,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-left: 0px;
   }
   .main__search {
     width: 100%;
