--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,6 +16,11 @@
   width: 100px;
 }
 
+.home__services {
+  margin-left: 18px;
+  margin-right: 18px;
+}
+
 .home__services h1 {
   text-align: center;
   font-weight: 600;
