--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,6 +39,22 @@
   margin-right: 1rem;
 }
 
+.aside__footer {
+  flex-direction: column;
+  padding-bottom: 5px !important;
+  padding-top: 20px !important;
+}
+
+.aside__footerLeft {
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.aside__footerLeft .footer__copyright {
+  display: none;
+}
+
 @media (max-width: 654px) {
   .footer {
     flex-direction: column;
