--- a/src/components/HomeComponent.css
+++ b/src/components/HomeComponent.css
@@ -2,10 +2,10 @@
   width: 100vw;
   height: 100vh;
   /*  background-color: blueviolet; */
-  background-image: url('../assets/images/HomeBackground.jpg');
-  background-position: 0 0;
+  /* background-image: url('../assets/images/HomeBackground.jpg'); */
+  /* background-position: 0 0;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   z-index: -1;
 }
 
