--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -108,7 +108,7 @@
   .main__slogan {
     font-size: 2.3rem;
     margin-bottom: 40px;
-    margin-top: 0;
+    margin-top: 30px;
     text-align: left;
   }
 }
