--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,4 +1,4 @@
-.login {
+.register {
   position: absolute;
   top: 0;
   left: 0;
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-.login__container {
+.register__container {
   background-color: white;
   position: relative;
   top: 50%;
@@ -18,19 +18,20 @@
   width: 100%;
   max-width: 800px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  flex-direction: row-reverse;
 }
 
-.login h2 {
+.register h2 {
   font-weight: 600;
 }
 
-.login h2::after {
+.register h2::after {
   content: '';
   display: block;
   height: 5px;
-  width: 50px;
+  width: 80px;
   background-color: var(--yellow);
 }
 
@@ -57,16 +58,15 @@
   color: gray;
 }
 
-.login__form {
+.register__form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 85%;
-  margin-top: 2rem;
+  height: 90%;
 }
 
-.login__input {
+.register__input {
   background-color: rgb(240, 240, 240);
   padding: 0.5rem 10px 0.5rem 10px;
   margin-bottom: 1rem;
@@ -75,21 +75,21 @@
   align-items: center;
 }
 
-.login__input input {
+.register__input input {
   background-color: inherit;
   border: none;
   margin-left: 10px;
 }
 
-.login__input input:focus {
+.register__input input:focus {
   outline: none;
 }
 
-.login__input .svg-inline--fa path {
+.register__input .svg-inline--fa path {
   color: rgb(180, 180, 180);
 }
 
-.login__checkbox {
+.register__checkbox {
   display: flex;
   align-items: center;
   color: darkgray;
@@ -97,25 +97,32 @@
   font-size: 0.9rem;
 }
 
-.login__checkbox input {
+.register__checkbox input {
   margin-right: 5px;
 }
 
-.login__submit {
+.register__submit {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 20px;
 }
 
-.login__submit p {
+.register__submit a {
   margin-bottom: 0;
-  color: darkgray;
+  color: var(--black);
   font-size: 0.9rem;
-  border-bottom: 1px solid lightgray;
+  font-weight: 500;
+  border-bottom: 1px solid var(--black);
   cursor: pointer;
 }
 
-.login__submit input {
+.register__submit a:hover,
+.register__submit a:active {
+  text-decoration: none;
+}
+
+.register__submit input {
   border: 1px solid var(--yellow);
   color: var(--black);
   font-weight: 500;
@@ -124,32 +131,23 @@
   padding: 7px 15px;
 }
 
-.login__register {
-  font-size: 0.9rem;
-  color: gray;
-}
-
-.login__register a {
-  color: var(--black);
-  font-weight: 500;
-  border-bottom: 1px solid var(--black);
-}
-
-.login__register a:hover,
-.login__register a:active {
-  text-decoration: none;
-  color: var(--black);
-}
-
 @media (max-width: 800px) {
-  .login img {
+  .register img {
     display: none;
   }
 
-  .login {
+  .register {
     background-color: white;
   }
   .home__link {
     right: unset;
+  }
+
+  .register__form {
+    margin-top: 60px;
+  }
+
+  .register__container {
+    transform: translate(-50%, -55%);
   }
 }
