--- a/src/pages/Video.css
+++ b/src/pages/Video.css
@@ -1,5 +1,5 @@
 .video__container {
-  background-color: #fcd114;
+  background-color: var(--black);
   display: flex;
   align-items: center;
   justify-content: center;
