--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -20,3 +20,32 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+.service__container:hover {
+  text-decoration: none;
+}
+
+.service {
+  height: 200px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 0 15px;
+}
+
+.service h2 {
+  margin: auto 0;
+  color: white;
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+
+.service p {
+  color: white;
+  margin: 0 !important;
+  padding: 0 !important;
+  text-align: justify;
+}
