changing height of main in Home page when height > 1000

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -112,3 +112,13 @@
     text-align: left;
   }
 }
+
+@media (min-height: 1000px) {
+  .main {
+    height: 50vh;
+  }
+
+  #ReactBackgroundSlider > figure {
+    height: 50% !important;
+  }
+}
