--- a/src/components/Language.css
+++ b/src/components/Language.css
@@ -3,7 +3,7 @@
 }
 
 .language {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
@@ -14,7 +14,7 @@
 }
 
 .language__list {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
