--- a/src/components/Service.css
+++ b/src/components/Service.css
@@ -41,7 +41,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 99;
 }
 
@@ -53,16 +53,18 @@
   width: 800px;
   height: auto;
   background-color: white;
-  padding: 15px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .service__list span {
+  display: inline-block;
   color: rgba(0, 0, 0, 0.5);
   border: 2px solid rgba(0, 0, 0, 0.3);
   padding: 5px;
   font-weight: 500;
   border-radius: 10px;
-  margin-right: 10px;
+  margin: 5px 10px 5px 0;
   cursor: pointer;
 }
 
