--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,7 +27,7 @@
   justify-content: space-between;
   align-items: center;
   position: fixed !important;
-  width: 100vw;
+  width: 100%;
   top: 0;
   z-index: 99;
   padding-top: 1rem !important;
