--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -71,10 +71,17 @@
   margin-top: 2rem;
 }
 
+.login__inputForm {
+  margin-bottom: 1rem;
+}
+
+.login__inputForm p {
+  margin-bottom: -0.5rem !important;
+}
+
 .login__input {
   background-color: rgb(240, 240, 240);
   padding: 0.5rem 10px 0.5rem 10px;
-  margin-bottom: 1rem;
   border-radius: 7px;
   display: flex;
   align-items: center;
