--- a/mail/templates/confirmEmail.handlebars
+++ b/mail/templates/confirmEmail.handlebars
@@ -120,8 +120,8 @@
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
                             <h1 style="font-size: 48px; font-weight: 400; margin: 2;">Welcome!</h1> 
-                            <img src="https://firebasestorage.googleapis.com/v0/b/handlep.appspot.com/o/logo512.png?alt=media&token=85daa81c-5814-4222-afa5-6ecf07dbdfea" 
-                            width="125" height="120" style="display: block; border: 0px;" />
+                            {{!-- <img src="https://firebasestorage.googleapis.com/v0/b/handlep.appspot.com/o/logo512.png?alt=media&token=85daa81c-5814-4222-afa5-6ecf07dbdfea" 
+                            width="125" height="120" style="display: block; border: 0px;" /> --}}
                      </td>
                     </tr>
                 </table>
@@ -161,13 +161,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">If you have any questions, just reply to this email—we're always happy to help out.</p>
-                        </td>
-                    </tr>
-                    <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Cheers,<br>Handelp Team</p>
+                            <p style="margin: 0;"><br>Handelp Team</p>
                         </td>
                     </tr>
                 </table>
