--- a/mail/templates/confirmEmail.handlebars
+++ b/mail/templates/confirmEmail.handlebars
@@ -169,7 +169,7 @@
                   <!-- COPY -->
                   <tr>
                      <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;"><a href="#" target="_blank" style="color: #0d6efd; font-size: 14px; ">{{url}}/confirmAccount/{{token}}</a></p>
+                        <p style="margin: 0;"><a href="{{url}}/confirmAccount/{{token}}" target="_blank" style="color: #0d6efd; font-size: 14px; ">{{url}}/confirmAccount/{{token}}</a></p>
                      </td>
                   </tr>
                   <tr>
