--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -44,9 +44,11 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding-top: 1rem;
   margin-top: 1rem;
   font-size: 14px;
   font-weight: 500;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .navbar__down p {
@@ -80,55 +82,13 @@
   color: var(--black);
 }
 
-.navbar__search {
+.navbar__center {
   display: flex;
   align-items: center;
-  max-width: 650px;
+  justify-content: space-between;
 }
 
-.navbar__searchBar {
-  display: flex;
-  align-items: center;
-  background-color: white;
-  padding: 0.4rem 0.7rem;
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border: 1px solid lightgrey;
-}
-
-.navbar__searchBar .fa-search path {
-  color: darkgray !important;
-}
-
-.navbar__searchBar input {
-  background-color: none;
-  border: none;
-  margin-left: 0.7rem;
-  width: 100%;
-}
-
-.navbar__searchButton {
-  background-color: var(--yellow);
-  padding: 7px 1.3rem;
-  border: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-weight: 500;
-  border-bottom: 1px solid var(--yellow);
-}
-
-.navbar__searchButton:hover,
-.navbar__searchButton:active {
-  background-color: orange;
-}
-
-.navbar__links {
-  display: flex;
-  align-items: center;
-}
-
-.navbar__links a {
+.navbar a {
   text-decoration: none;
   font-family: 'Metropolis', sans-serif;
   font-weight: 500;
@@ -137,14 +97,14 @@
   color: var(--black);
 }
 
-.navbar__links a:hover,
-.navbar__links a:active {
+.navbar a:hover,
+.navbar a:active {
   text-decoration: none;
   color: var(--black);
 }
 
-.navbar__links a:hover::after,
-.navbar__links a:active::after {
+.navbar a:hover::after,
+.navbar a:active::after {
   content: '';
   display: block;
   height: 5px;
@@ -153,22 +113,26 @@
   margin-bottom: -5px;
 }
 
-.navbar__links a:nth-child(2) {
-  margin-right: 1rem;
-  margin-left: 1rem;
+.navbar__left {
+  display: flex;
+  align-items: center;
 }
 
-.navbar__links a:nth-child(3) {
+.navbar__center {
+  margin-left: 1.5rem;
+}
+
+.navbar__center a:nth-child(2) {
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+}
+
+.navbar__center a:nth-child(3) {
   margin-left: 0;
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
-.navbar__links a:nth-child(4) {
-  margin-left: 0;
-  margin-right: 1rem;
-}
-
-.navbar__authLinks {
+.navbar__right {
   align-items: center;
 }
 
@@ -176,6 +140,7 @@
   border: 1px solid var(--black);
   padding: 0.3rem 0.5rem;
   border-radius: 3px;
+  margin: 0 1rem;
 }
 
 .navbar__linkRegister:hover,
