--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -136,6 +136,32 @@
   align-items: center;
 }
 
+.navbar__right .searchBtn {
+  cursor: pointer;
+}
+
+.navbar__search {
+  position: fixed;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  background-color: #f4f4f4;
+  display: flex;
+  align-items: center;
+  z-index: 999;
+  transition: top 0.4s ease-out;
+}
+
+.navbar__search input {
+  background-color: inherit;
+  width: 250px;
+  border: none;
+}
+
 .navbar__linkRegister {
   border: 1px solid var(--black);
   padding: 0.3rem 0.5rem;
