--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -223,6 +223,12 @@
   }
 }
 
+@media (max-width: 1150px) {
+  .navbar__down {
+    display: none;
+  }
+}
+
 @media (max-width: 850px) {
   .navbar__center {
     display: none;
