--- a/frontend/src/pages/Store.css
+++ b/frontend/src/pages/Store.css
@@ -2,6 +2,25 @@
   margin-top: 150px;
 }
 
+.store__categories {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -50px;
+}
+
+.store__categories select {
+  background-color: #f4f4f4;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding: 0.4rem 0.5rem;
+  border-radius: 0.5rem;
+  text-transform: capitalize;
+  width: 250px;
+  margin-bottom: 1rem;
+}
+
 .store__gig {
   border: 1px solid #e8e8e8;
   transition: box-shadow 0.4s ease;
@@ -71,4 +90,10 @@
 
 .gig__footer span {
   cursor: pointer;
+}
+
+@media (min-width: 1150px) {
+  .store__categories {
+    display: none;
+  }
 }
