--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -22,48 +22,24 @@
   font-size: 3rem;
 }
 
-.main__search {
+.main__buttons {
   display: flex;
   align-items: center;
   max-width: 650px;
 }
 
-.main__searchBar {
-  background-color: var(--black);
-  padding: 0.7rem 0.7rem;
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  display: flex;
-  align-items: center;
-}
-
-.main__searchBar .fa-search path {
-  color: darkgray;
-}
-
-.main__searchBar input {
-  background-color: none;
-  border: none;
-  margin-left: 0.7rem;
-  width: 100%;
-  overflow-x: hidden;
-  background-color: var(--black);
-  color: white;
-}
-
-.main__searchButton {
+.main__buttons button {
   background-color: var(--yellow);
   padding: 0.7rem 1.3rem;
   border: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-radius: 5px;
   font-weight: 500;
 }
 
-.main__searchButton:hover,
-.main__searchButton:active {
-  background-color: orange;
+.main__buttonAbout {
+  color: var(--yellow);
+  background-color: var(--black) !important;
+  margin-left: 1rem;
 }
 
 @media (max-width: 768px) {
