--- a/frontend/src/pages/Store.css
+++ b/frontend/src/pages/Store.css
@@ -1,5 +1,5 @@
 .store {
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .store__categories {
@@ -93,6 +93,9 @@
 }
 
 @media (min-width: 1150px) {
+  .store {
+    margin-top: 150px;
+  }
   .store__categories {
     display: none;
   }
