--- a/frontend/src/components/dashboardModals/EditLanguage.css
+++ b/frontend/src/components/dashboardModals/EditLanguage.css
@@ -2,6 +2,7 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .editLanguage__modal button {
