--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,3 +41,7 @@ button:active {
   background-color: orange !important;
   border-color: orange !important;
 }
+
+.icon-white path {
+  color: white;
+}
