Adding "pending" param to Gig model

--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -180,6 +180,7 @@
   margin-top: 10px;
 }
 
-/* .dashboard .gig__buttons button {
-  width: 100%;
-} */
+.dashboard__gigState {
+  font-size: 14px;
+  margin-top: 10px;
+}
