--- a/frontend/src/pages/gigs/Gig.css
+++ b/frontend/src/pages/gigs/Gig.css
@@ -5,6 +5,7 @@
 .gigPage__image label {
   width: 100%;
   height: 100%;
+  min-height: 350px;
   background-color: rgba(0, 0, 0, 0.1);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -53,6 +54,10 @@
 .gigPage__inputField {
   display: flex;
   align-items: flex-start;
+}
+
+.gigPage__inputField option {
+  text-transform: capitalize;
 }
 
 .gigPage__inputField h4 {
