--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -18,9 +18,39 @@
   margin-bottom: 1rem;
 }
 
+.user__image {
+  position: relative;
+}
+
 .user__image img {
   border-radius: 50%;
   margin-right: 3rem;
+  cursor: pointer;
+}
+
+.user__imageEdit input {
+  display: none;
+}
+
+.user__imageEdit label {
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-75%, -50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+  color: white;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.user__imageEdit label path {
+  color: white;
 }
 
 .user__info h4 {
