--- a/frontend/src/pages/Avatar.css
+++ b/frontend/src/pages/Avatar.css
@@ -1,8 +1,7 @@
-.cropContainer {
+/* .cropContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 500px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -11,12 +10,11 @@
 }
 
 .imageCropContainer {
-  position: relative;
-  max-width: 500px;
+  position: absolute;
   width: 100%;
   height: 400px;
   background-color: white;
-}
+} */
 
 .crop__controls {
   background-color: white;
@@ -29,6 +27,7 @@
   justify-content: center;
   width: 100%;
   left: 50%;
+  z-index: 99999;
 }
 
 .crop__controls input {
@@ -38,4 +37,24 @@
 
 .crop__controls button {
   width: 100px;
+}
+
+.cropContainer {
+  width: 100vw;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  z-index: 9999;
+}
+
+.imageCropContainer {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  background-color: white;
 }
