function : edit gig done

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,7 +19,8 @@ body {
 input:focus,
 button:focus,
 select:focus,
-button:active {
+button:active,
+textarea:focus {
   outline: none !important;
   box-shadow: none !important;
 }
