--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,10 @@ textarea:focus {
   color: white;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 a:hover,
 a:focus {
   text-decoration: none !important;
