--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -233,3 +233,15 @@
   font-size: 14px;
   margin-top: 10px;
 }
+
+.dashboard .gig__image {
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.dashboard .store__gig img {
+  width: 275px;
+}
