--- a/frontend/src/pages/gigs/Gig.css
+++ b/frontend/src/pages/gigs/Gig.css
@@ -2,7 +2,11 @@
   margin-top: 100px;
 }
 
-.gigPage__image label {
+.gigPage__image {
+  width: 100%;
+}
+
+.gigPage__image .gigImage__firstUpload label {
   width: 100%;
   height: 100%;
   min-height: 350px;
@@ -13,7 +17,7 @@
   cursor: pointer;
 }
 
-.gigPage__image label div {
+.gigPage__image .gigImage__firstUpload label div {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -23,18 +27,18 @@
   margin-top: -10px;
 }
 
-.gigPage__image label p {
+.gigPage__image .gigImage__firstUpload label p {
   font-weight: 500;
   color: gray;
   font-size: 1.6rem;
   margin-top: 10px;
 }
 
-.gigPage__image label path {
+.gigPage__image .gigImage__firstUpload label path {
   color: gray;
 }
 
-.gigPage__image input {
+.gigPage__image .gigImage__firstUpload input {
   display: none;
 }
 
