feat - change language with settings

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,12 @@
+html {
+  scroll-behavior: smooth !important;
+}
+
 body {
   overflow-x: hidden;
   color: var(--black);
+  scroll-behavior: smooth !important;
 }
-
 .app-anim {
   display: none;
 }
