--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -235,7 +235,8 @@
   padding: 0 !important;
 }
 
-.navbar__user .dropdown-item:nth-child(3) {
+.navbar__user .dropdown-item:nth-child(3),
+.navbar__user .dropdown-item:nth-child(4) {
   padding: 0.25rem 1rem !important;
 }
 
