--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -12,20 +12,23 @@
 .main__content {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  margin-left: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
 }
 
 .main__slogan {
   font-weight: 600;
   color: var(--black);
   font-size: 3rem;
+  text-align: center;
 }
 
 .main__buttons {
   display: flex;
   align-items: center;
-  max-width: 650px;
+  justify-content: center;
+  width: 100%;
 }
 
 .main__buttons button {
@@ -83,9 +86,19 @@
 @media (max-width: 400px) {
   .main__slogan {
     font-size: 2.3rem;
-    margin-bottom: 40px;
-    margin-top: 30px;
-    text-align: left;
+  }
+}
+
+@media (max-width: 300px) {
+  .main__buttons {
+    flex-direction: column;
+  }
+  .main__buttons button {
+    width: 100%;
+  }
+  .main__buttonAbout {
+    margin-left: 0;
+    margin-top: 1rem;
   }
 }
 
