--- a/frontend/src/pages/gigs/Gig.css
+++ b/frontend/src/pages/gigs/Gig.css
@@ -2,12 +2,16 @@
   margin-top: 100px;
 }
 
+.gigPage__image .gigImage__firstUpload {
+  width: 100%;
+  height: 100%;
+}
+
 .gigPage__image .gigImage__firstUpload label {
   width: 100%;
   height: 100%;
   min-height: 350px;
   background-color: rgba(0, 0, 0, 0.1);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   position: relative;
   cursor: pointer;
